--- a/vignettes/sample-selection.Rmd
+++ b/vignettes/sample-selection.Rmd
@@ -24,95 +24,76 @@ library(jfa)
 ## Introduction
 
 This vignette outlines the most commonly used sampling methodology for auditing
-and shows how to select a sample using these methods with the **jfa** package.
+and demonstrates how to use the **jfa** package to select a sample using these
+techniques.
 
 <p align='center'><img src='selection.png' alt='selection' width='100%'></p>
 
-Auditors are often required to assess balances or processes that involve a large
-number of items. Since they cannot inspect all of these items individually, they
-need to select a subset (i.e., a sample) from the total population to make a
-statement about a certain characteristic of the population. For this purpose,
-various selection methodologies are available that have become standard in an
-audit context [@leslie_1979].
+Auditors often need to evaluate balances or processes that involve a large
+number of items or units. As it is not feasible to individually inspect all of
+these items or units, they must select a subset (i.e., a sample) from the
+population to make a statement about a specific characteristic (often the
+misstatement) of the population. Various sampling methods, which have become
+standard practice in the field of auditing, are available for this purpose
+[@leslie_1979].
 
 ### Sampling units
 
-Selecting a subset from the population requires knowledge of the sampling units;
-physical representations of the population that needs to be audited. Generally,
-the auditor has to choose between two types of sampling units: individual items
-in the population or individual monetary units in the population. In order to
-perform statistical selection, the population must be divided into individual
-sampling units that can be assigned a probability to be included in the sample.
-The total collection of all sampling units which have been assigned a selection
-probability is called the sampling frame.
+Selecting a subset of items or units from the population requires knowledge of
+the sampling units, which are physical representations of the population that
+needs to be audited. Typically, the auditor must decide between two types of
+sampling units: individual items in the population or individual monetary units
+in the population. To conduct statistical selection, the population must be
+segmented into individual sampling units, each of which can be assigned a
+probability of being included in the sample. The complete collection of all
+sampling units assigned a selection probability is known as the sampling frame.
 
 #### Items
 
-A sampling unit for record (i.e., attributes) sampling is generally a
-characteristic of an item in the population. For example, suppose that you
-inspect a population of receipts. A possible sampling unit for record sampling
-can be the date of payment of the receipt. When a sampling unit (e.g., date of
-payment) is selected by the sampling method, the population item that
-corresponds to the sampled unit is included in the sample.
+A sampling unit for record (i.e., attributes) sampling is usually a
+characteristic of an item in the population. For instance, if you are inspecting
+a population of receipts, a potential sampling unit for record sampling could be
+the date of payment of the receipt. When a sampling unit (e.g., date of payment)
+is indicated by the sampling method, the population item corresponding to the
+sampled unit is included in the sample.
 
 #### Monetary units
 
-A sampling unit for monetary unit sampling is different than a sampling unit for
+A sampling unit for monetary unit sampling differs from a sampling unit for
 record sampling in that it is an individual monetary unit within an item or
-transaction, like an individual dollar. For example, a single sampling unit can
-be the 10$^{th}$ dollar from a specific receipt in the population. When a
-sampling unit (e.g., individual dollar) is selected by the sampling method, the
-population item that includes the sampling unit is included in the sample.
+transaction, like an individual dollar. For example, a single sampling unit
+could be the 10$^{th}$ dollar from a specific receipt in the population. When a
+sampling unit (e.g., individual dollar) is indicated by the sampling method, the
+population item containing the sampling unit is included in the sample.
 
 ### Sampling methods
 
 This section discusses the four sampling methods implemented in **jfa**. First,
 for notation, let the the population $N$ be defined as the total set of
-individual sampling units $x_i$.
+individual sampling units: $N = \{x_1, x_2, \dots, x_N\}$. In statistical
+sampling, every sampling unit $x_i$ in the population must receive a selection
+probability $p(x_i)$.
 
-$$N = \{x_1, x_2, \dots, x_N\}.$$
-
-In statistical sampling, every sampling unit $x_i$ in the population must
-receive a selection probability $p(x_i)$. The purpose of the sampling method is
-to provide a framework to assign selection probabilities to each of the sampling
-units, and subsequently draw sampling units from the population until a set of
-size $n$ has been created.
-
-The next section discusses which sampling methods are available in **jfa**. To
-illustrate the outcomes for different sampling methods, we will use the
-`BuildIt` data set that can be loaded using the code below.
+The purpose of the sampling method is to provide a framework to assign selection
+probabilities $p(x_i)$ to each of the sampling units, and subsequently draw
+sampling units from the population until a set of size $n$ has been created. To
+illustrate the outcomes of different sampling methods on the same data set, we
+will use the `BuildIt` data set that is included in the package. This data set
+can be loaded via the command below.
 
 ```{r}
 data(BuildIt)
+head(BuildIt)
 ```
 
-#### Fixed interval sampling (Systematic sampling)
+#### Fixed interval sampling
 
-Fixed interval sampling is a method designed for yielding representative samples
-from monetary populations. The algorithm determines a uniform interval on the
-(optionally ranked) sampling units. Next, a starting point is handpicked or
-randomly selected in the first interval and a sampling unit is selected
-throughout the population at each of the uniform intervals from the starting
-point. For example, if the interval has a width of 10 sampling units and
-sampling unit number 5 is chosen as the starting point, the sampling units 5,
-15, 25, etc. are selected to be included in the sample.
-
-The number of required intervals $I$ can be determined by dividing the number of
-sampling units in the population by the required sample size:
-
-$$I = \frac{N}{n},$$
-
-in which $n$ is the required sample size and $N$ is the total number of sampling
-units in the population.
-
-If the space between the selected sampling units is equal, the selection
-probability for each sampling unit is theoretically defined as:
-
-$$p(x) = \frac{1}{I},$$
-
-with the property that the space between selected units $i$ is the same as the
-interval $I$, see Figure 1. However, in practice the selection is deterministic
-and completely depends on the chosen starting points (using `start`).
+Fixed interval sampling (a.k.a. systematic sampling) is a method designed to
+generate representative samples from monetary populations. This algorithm
+establishes a uniform interval on the sampling units. Following this, a starting
+point is either manually chosen or randomly selected within the first interval.
+A sampling unit is then selected at each of the uniform intervals from this
+starting point throughout the population, see Figure 1.
 
 <center>
 
@@ -120,57 +101,67 @@ and completely depends on the chosen starting points (using `start`).
 
 </center>
 
-The fixed interval method yields a sample that allows every sampling unit in the
-population an equal chance of being selected. However, the fixed interval method
-has the property that all items in the population with a monetary value larger
-than the interval $I$ have an selection probability of one because one of these
-items' sampling units are always selected from the interval. Note that, if the
-population is arranged randomly with respect to its deviation pattern, fixed
-interval sampling is equivalent to random selection.
+The number of required intervals $I$ can be calculated by dividing the total
+number of sampling units in the population $N$ by the desired sample size $n$:
+$I$ = $\frac{N}{n}$. For example, if the total population consists of $N$ =
+1000 units and the desired sample size is $n$ = 100 units, the interval would be
+$I$ = 10 sampling units wide. If, subsequently, the 5$^{\text{th}}$ sampling
+unit is chosen as the starting point in the first interval, the sampling units
+5, 15, 25, etc., are selected to be included in the sample. It is important to
+note that this selection is entirely deterministic and depends on the chosen
+starting point (specified via `start`).
 
-**Advantage(s):** The advantage of the fixed interval sampling method is that it
-is often simple to understand and fast to perform. Another advantage is that, in
-monetary unit sampling, all items that are greater than the calculated interval
-will be included in the sample. In record sampling, since units can be ranked on
-the basis of value, there is also a guarantee that some large items will be in
-the sample.
+The fixed interval method provides a sample where each sampling unit in the
+population has an equal chance of being selected. However, this method ensures
+that all items in the population with a monetary value larger than the interval
+width $I$ are always included in the sample, as one of these items' sampling
+units will always be selected from the interval. If the population is randomly
+arranged with respect to its deviation pattern, fixed interval sampling is
+equivalent to random selection.
 
-**Disadvantage(s):** A pattern in the population can coincide with the selected
-interval, rendering the sample less representative. What is sometimes seen as an
-added complication for this method is that the sample is hard to extend after
-drawing the initial sample. This is due to the chance of selecting the same
-sampling unit. However, by removing the already selected sampling units from the
-population and redrawing the intervals this problem can be efficiently solved.
+**Advantage(s):** The fixed interval sampling method is often easy to understand
+and quick to execute. In monetary unit sampling, all items larger than the
+calculated interval are included in the sample. In record sampling, since units
+can be ranked based on value, there is a guarantee that some large items will be
+included in the sample.
 
-As an example, the code below shows how to apply the fixed interval sampling
-method in a record sampling and a monetary unit sampling setting. Note that, by
-default, the first sampling unit from each interval is selected. However, this
-can be changed by setting the argument `start = 1` to a different value.
+**Disadvantage(s):** A pattern in the population may align with the selected
+interval, making the sample less representative. An additional complication with
+this method is that it is difficult to extend the sample after the initial
+sample has been drawn due to the possibility of selecting the same sampling
+unit. However, this problem can be efficiently solved by removing the already
+selected sampling units from the population and redrawing the intervals.
+
+The code below demonstrates how to apply the fixed interval sampling method in
+both a record sampling and a monetary unit sampling setting. By default, the
+first sampling unit from each interval is selected. However, this can be changed
+by setting the argument `start = 1` to a different value.
 
 ```{r}
 # Record sampling
-sample <- selection(data = BuildIt, size = 100, units = "items", method = "interval", start = 1)
-head(sample$sample, n = 6)
+result <- selection(
+  data = BuildIt, size = 100,
+  units = "items", method = "interval", start = 1
+)
+head(result[["sample"]])
 ```
 
 ```{r}
 # Monetary unit sampling
-sample <- selection(data = BuildIt, size = 100, units = "values", method = "interval", values = "bookValue", start = 1)
-head(sample$sample, n = 6)
+result <- selection(
+  data = BuildIt, size = 100,
+  units = "values", method = "interval", values = "bookValue", start = 1
+)
+head(result[["sample"]])
 ```
 
 #### Cell sampling
 
-The cell sampling method divides the (optionally ranked) population into a set
-of intervals $I$ that are computed through the previously given equations.
-Within each interval, a sampling unit is selected by randomly drawing a number
-between 1 and the interval range $I$. This causes the space $i$ between the
-sampling units to vary.
-
-Like in the fixed interval sampling method, the selection probability for each
-sampling unit is defined as:
-
-$$p(x) = \frac{1}{I}.$$
+The cell sampling method splits the population into the same set of intervals
+$I$ used by fixed interval sampling. However, unlike fixed interval sampling, a
+sampling unit is selected within each interval by randomly drawing a number
+between 1 and the interval range $I$. This results in a variable space $i$
+between the sampling units, as shown in Figure 2.
 
 <center>
 
@@ -178,53 +169,55 @@ $$p(x) = \frac{1}{I}.$$
 
 </center>
 
-The cell sampling method has the property that all items in the population with
-a monetary value larger than twice the interval $I$ have a selection probability
-of one.
+This method ensures that all items in the population with a monetary value
+larger than twice the interval $I$ are always included in the sample, as one of
+these items' sampling units will always be selected from one of the two
+intervals.
 
-**Advantage(s):** More sets of samples are possible than in fixed interval
-sampling, as there is no systematic interval $i$ to determine the selections. It
-is argued that the cell sampling algorithm offers a solution to the pattern
-problem in fixed interval sampling.
+**Advantage(s):**  Unlike fixed interval sampling, which has a systematic
+interval $i$ to determine selections, cell sampling allows for more possible
+sets of samples. It is argued that the cell sampling algorithm addresses the
+pattern problem found in fixed interval sampling.
 
-**Disadvantage(s):** A disadvantage of this sampling method is that not all
-items in the population with a monetary value larger than the interval have a
-selection probability of one. Besides, population items can be in two adjacent
-cells, thereby creating the possibility that an items is included in the sample
+**Disadvantage(s):** Cell sampling has a drawback in that not all items in the
+population with a monetary value larger than the interval are always included in
+the sample. Additionally, population items can be located in two adjacent
+intervals, creating the possibility of an item being included in the sample
 twice.
 
-As an example, the code below shows how to apply the cell sampling method in a
-record sampling and a monetary unit sampling setting. It is important to set a
-seed to make the results reproducible.
+The code below demonstrates how to apply the cell sampling method in both a
+record sampling and a monetary unit sampling setting. Since this algorithm
+involves random number generation, it is important to set a seed via
+`set.seed()` to ensure the results are reproducible.
 
 ```{r}
 # Record sampling
 set.seed(1)
-sample <- selection(data = BuildIt, size = 100, units = "items", method = "cell")
-head(sample$sample, n = 6)
+result <- selection(
+  data = BuildIt, size = 100,
+  units = "items", method = "cell"
+)
+head(result[["sample"]])
 ```
 
 ```{r}
 # Monetary unit sampling
 set.seed(1)
-sample <- selection(data = BuildIt, size = 100, units = "values", method = "cell", values = "bookValue")
-head(sample$sample, n = 6)
+result <- selection(
+  data = BuildIt, size = 100,
+  units = "values", method = "cell", values = "bookValue"
+)
+head(result[["sample"]])
 ```
 
 #### Random sampling
 
-Random sampling is the most simple and straight-forward selection method The
-random sampling method provides a method that allows every sampling unit in the
-population an equal chance of being selected, meaning that every combination of
-sampling units has the same probability of being selected as every other
-combination of the same number of sampling units. Simply put, the algorithm
-draws a random selection of size $n$ of the sampling units. Therefore, the
-selection probability for each sampling unit is defined as:
-
-$$p(x) = \frac{1}{N},$$
-
-where $N$ is the number of units in the population. To clarify this procedure,
-Figure 3 provides an illustration of the random sampling method.
+Random sampling is the simplest and most straightforward selection method. This
+method allows every sampling unit in the population an equal chance of being
+selected, meaning that every combination of sampling units has the same
+probability of being selected as every other combination of the same number of
+sampling units. In essence, the algorithm draws a random selection of size $n$
+from the sampling units, as illustrated in Figure 3.
 
 <center>
 
@@ -232,90 +225,103 @@ Figure 3 provides an illustration of the random sampling method.
 
 </center>
 
-**Advantage(s):** The random sampling method yields an optimal random selection,
-with the additional advantage that the sample can be easily extended by applying
-the same method again.
+**Advantage(s):** The random sampling method produces an optimal random
+selection, with the added benefit that the sample can be easily extended by
+reapplying the same method.
 
-**Disadvantages:** Because the selection probabilities are equal for all
-sampling units there is no guarantee that items with a large monetary value in
-the population will be included in the sample.
+**Disadvantages:** Since the selection probabilities are equal for all sampling
+units, there is no guarantee that items in the population with a large monetary
+value will be included in the sample.
 
-As an example, the code below shows how to apply the random sampling (with our
-without replacement using `replace`) method in a record sampling and a monetary
-unit sampling setting. It is important to set a seed to make results
+The code below demonstrates how to apply the random sampling method (with or
+without replacement using `replace`) in both a record sampling and a monetary
+unit sampling setting. Since this algorithm involves random number generation,
+it is important to set a seed via `set.seed()` to ensure the results are
 reproducible.
 
 ```{r}
 # Record sampling
 set.seed(1)
-sample <- selection(data = BuildIt, size = 100, units = "items", method = "random")
-head(sample$sample, n = 6)
+result <- selection(
+  data = BuildIt, size = 100,
+  units = "items", method = "random"
+)
+head(result[["sample"]])
 ```
 
 ```{r}
 # Monetary unit sampling
 set.seed(1)
-sample <- selection(data = BuildIt, size = 100, units = "values", method = "random", values = "bookValue")
-head(sample$sample, n = 6)
+result <- selection(
+  data = BuildIt, size = 100,
+  units = "values", method = "random", values = "bookValue"
+)
+head(result[["sample"]])
 ```
 
-#### Modified Sieve Sampling
+#### Modified sieve sampling
 
-The fourth option for the sampling method is modified sieve sampling
-[@hoogduin_2010]. The algorithm starts by selecting a standard uniform random
-number $R_i$ between 0 and 1 for each item in the population. Next, the sieve
-ratio:
+The fourth and final sampling method option is modified sieve sampling
+[@hoogduin_2010]. This algorithm begins by selecting a standard uniform random
+number $R_i$ between 0 and 1 for each item in the population. Then, the sieve
+ratio $S_i$ = $\frac{Y_i}{R_i}$ is calculated for each item by dividing the
+book value of the item by the random number. Finally, the items in the
+population are sorted by their sieve ratio $S_i$ in descending order, and the
+top $n$ items are chosen to be included in the sample. Unlike the classical
+sieve sampling method [@rietveld_1978], the modified sieve sampling method
+allows for precise control over sample sizes.
 
-$$S_i = \frac{Y_i}{R_i}$$
-
-is computed for each item by dividing the book value of that item by the random
-number. Lastly, the items in the population are sorted by their sieve ratio $S$
-(in decreasing order) and the top $n$ items are selected for inspection. In
-contrast to the classical sieve sampling method [@rietveld_1978], the modified
-sieve sampling method provides precise control over sample sizes.
-
-As an example, the code below shows how to apply the modified sieve sampling
-method in a monetary unit sampling setting. It is important to set a seed to
-make results reproducible.
+The code below demonstrates how to apply the modified sieve sampling method in a
+monetary unit sampling setting. Since this algorithm involves random number
+generation, it is important to set a seed via `set.seed()` to ensure the results
+are reproducible. Also note that since this algorithm requires the book values
+of the items, it is not possible to apply in a record sampling setting.
 
 ```{r}
 # Monetary unit sampling
 set.seed(1)
-sample <- selection(data = BuildIt, size = 100, units = "values", method = "sieve", values = "bookValue")
-head(sample$sample, n = 6)
+result <- selection(
+  data = BuildIt, size = 100,
+  units = "values", method = "sieve", values = "bookValue"
+)
+head(result[["sample"]])
 ```
 
 ### Ordering or randomizing the population
 
-The `selection()` function has additional arguments (`order`, `decreasing`,
-and `randomize`) to preprocess your population before selection. The `order`
-argument takes as input a column name in `data` which determines the order of
-the population. For example, you can order the population from lowest book value
-to highest book value before engaging in selection. In this case, you should use
-the `decreasing = FALSE` argument.
+The `selection()` function offers additional arguments (`order`, `decreasing`,
+and `randomize`) that enable you to preprocess your population before selection.
+The `order` argument takes the name of a column in `data` as input, and the
+function then sorts the population based on this column. The `decreasing`
+argument specifies whether the population is sorted from lowest to highest (when
+`decreasing = FALSE`) or from highest to lowest (when `decreasing = TRUE`).
+
+For instance, if you wish to sort the population from the lowest to the highest
+book value (found in the `bookValue` column) before starting monetary unit
+sampling, you should use `order = "bookValue"` along with the
+`decreasing = FALSE` argument.
 
 ```{r}
-# Ordering population from lowest 'bookValue' to highest 'bookValue' before MUS
 set.seed(1)
-sample <- selection(
+result <- selection(
   data = BuildIt, size = 100,
   units = "values", values = "bookValue",
   order = "bookValue", decreasing = FALSE
 )
-head(sample$sample, n = 6)
+head(result[["sample"]])
 ```
 
-The `randomize` argument can be used to randomly shuffle the items in the
-population before selection.
+In addition, the `randomize = TRUE` argument can be used to randomly shuffle the
+items in the population before selection. By default, no randomization is
+applied.
 
 ```{r}
-# Randomly shuffle population items before MUS
 set.seed(1)
-sample <- selection(
+result <- selection(
   data = BuildIt, size = 100,
   units = "values", values = "bookValue", randomize = TRUE
 )
-head(sample$sample, n = 6)
+head(result[["sample"]])
 ```
 
 ## References
